Wrapping up martingale residual plots.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,4 @@ exportPattern("^[[:alpha:]]+")
 import("survival")
 import("ggplot2")
 importFrom(riskRegression, predictCox)
+importFrom(Rmisc, multiplot)
