Plot DFBetas function added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@ import("survival")
 import("ggplot2")
 importFrom(riskRegression, predictCox)
 importFrom(Rmisc, multiplot)
+importFrom(data.table, melt)
