--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ import("ggplot2")
 importFrom(riskRegression, predictCox)
 importFrom(Rmisc, multiplot)
 importFrom(data.table, melt)
+importFrom("stats", "dfbeta", "median", "residuals", "sd")
