Updating namespace and functions to pass checks.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ import("ggplot2")
 import("data.table")
 importFrom(riskRegression, predictCox)
 importFrom(Rmisc, multiplot)
-importFrom("stats", "dfbeta", "median", "residuals", "sd")
+importFrom("stats", "dfbeta", "median", "residuals", "sd", "as.formula")
