--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: coxtools
 Date: 2019-03-04
 Type: Package
-Title: Suite of Tools for Cox Proportional Hazards Models
+Title: Tools for Cox Proportional Hazards Models
 Version: 1.0.0
 Authors@R: c(person(given = c("Benjamin", "W."), family = "Campbell", email = "campbell.1721@osu.edu", role = c("aut", "cre")))
 Author: Benjamin W. Campbell [aut, cre]
 Maintainer: Benjamin W. Campbell <campbell.1721@osu.edu>
 URL: http://github.com/benjamin-w-campbell/coxtools
-Description: Suite of tools for the assessment of fit and performance for Cox Proportional Hazard Models.  Tools to examine the Cox-Snell, Martingale, and Deviance residuals, DFBETAs, and substantive effect sizes for Cox Proportional Hazard Models.
+Description: Tools for the assessment of fit and performance for Cox proportional hazard models.  Tools to examine the Cox-Snell, Martingale, and deviance residuals, DFBETAs, and substantive effect sizes for Cox proportional hazard models.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
